--- a/App.config
+++ b/App.config
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
+<!--
+  Install-Package xunit -Version 2.1.0
+  Install-Package xunit.runner.console -Version 2.1.0
+  Install-Package xunit.runner.visualstudio -Version 2.1.0
+-->
 <configuration>
   <appSettings>
     <add key="xunit.diagnosticMessages" value="true"/>
